      a class of inefficient but annoying DoS attacks by hidden service
      directories. Fixes bug 13214; bugfix on 0.2.1.6-alpha. Reported
      by "special".

  o Minor bugfixes (Linux seccomp2 sandbox):
    - Make transparent proxy support work along with the seccomp2
      sandbox. Fixes part of bug 13808; bugfix on 0.2.5.1-alpha. Patch
      by Francisco Blas Izquierdo Riera.

  o Minor bugfixes (logging):
    - Downgrade warnings about RSA signature failures to info log level.
      Emit a warning when extra info document is found incompatible with
      a corresponding router descriptor. Fixes bug 9812; bugfix
      on 0.0.6rc3.
    - Log the circuit ID correctly in
      connection_ap_handshake_attach_circuit(). Fixes bug 13701; bugfix
      on 0.0.6.

  o Minor bugfixes (misc):
    - Stop allowing invalid address patterns like "*/24" that contain
      both a wildcard address and a bit prefix length. This affects all
      our address-range parsing code. Fixes bug 7484; bugfix
      on 0.0.2pre14.

  o Minor bugfixes (testing networks):
    - Allow Tor to build circuits using a consensus with no exits. If
      the consensus has no exits (typical of a bootstrapping test
      network), allow Tor to build circuits once enough descriptors have
      been downloaded. This assists in bootstrapping a testing Tor
      network. Fixes bug 13718; bugfix on 0.2.4.10-alpha. Patch
      by "teor".
    - When V3AuthVotingInterval is low, give a lower If-Modified-Since
      header to directory servers. This allows us to obtain consensuses
      promptly when the consensus interval is very short. This assists
      in bootstrapping a testing Tor network. Fixes parts of bugs 13718
      and 13963; bugfix on 0.2.0.3-alpha. Patch by "teor".
    - Stop assuming that private addresses are local when checking
      reachability in a TestingTorNetwork. Instead, when testing, assume
      all OR connections are remote. (This is necessary due to many test